# sops

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  version.yml
sops/: main.py
sops/system_messages/: ask_system_message.md  context_system_message.md  edit_system_message.md  list_system_message.md
sops/utils/: agent.py  config.py  editor.py  payloads.py
tests/: test_agent.py  test_config.py  test_editor.py  test_payloads.py
